flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: flask
  name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      run: flask-counter
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: flask-counter
    spec:
      containers:
      - image: flask-counter2
        name: flask-counter
        livenessProbe:
          httpGet:
            path: /health/live
            port: 5000
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 5000
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 200m
        #livenessProbe: {}
            
status: {}
