flask-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: flask-counter
  name: flask-counter
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: flask-counter
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
