mysql-counter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-pv-svc
  labels:
    app: flask-counter
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: flask-counter
    tier: mysql-counter
  type: ClusterIP
