ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: flask-counter
spec:
  rules:
  - host: customer2-app-192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: flask-counter
          servicePort: 5000
